--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,14 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+jairus: 
+  name: jairus
+  email: jairusjimenez@live.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, '123456') %>
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+another: 
+  name: a nother
+  email: another@example.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, '123456') %>
+
+foobar: 
+  name: foo bar
+  email: foo@bar.com
+  encrypted_password: <%= Devise::Encryptor.digest(User, '123456') %>
